# fastcampus_hee

./: .gitignore  .infisical.json  Makefile  README.md  docker-compose.yaml  secure.db  vulnerable.db
.claude/: settings.local.json
.devcontainer/: Dockerfile.integrated  devcontainer.json
.github/workflows/: cd.yml  ci.yml
Part1_Ch2/: utils.py
Part1_Ch3/: http_server.py  simple_server.py  test_http_server.py  test_simple_server.py
Part1_Ch4/filesystem/: __init__.py  list_directory.py  mcp_server.py  read_file.py  replace.py  test_mcp_server.py  write_file.py
Part1_Ch4/sqlite/: README.md  __init__.py  checklist.py  crud_api.py  db_design.py  db_to_file_report.py  file_to_db_pipeline.py  mcp_server.py  query_api.py  test_all.py  test_all.sh  test_mcp_server.py  (+2 more)
Part2_JWT/: .env.example  01_api_key_management.py  Process.md
Part2_PromptInjection/: Process.md  README.md
Part2_PromptInjection copy/: README.md
Part2_PyCasbin/: app.py  app_allow_bob_write.py  policy.csv  requirements.txt
Part2_SQLInjection/: Process.md  README.md
Part3_CI_test/: test_config_validation.py  test_jwt_validation.py  test_security_utils.py
Part3_CI_test_error/: test_security_utils.py
Part3_MCP_Anlaysis/: analyze_project.py  github_mcp_server.py  pyproject.toml
Part3_MCP_Architecture/: test_client_b.py  test_failure_expired_jwt.py  test_failure_no_ca.py  test_tenant_b.sh
Part3_MCP_Architecture_MCP_Success/: test_client_a.py  test_client_b.py  test_tenant_a.sh
Part3_MCP_Architecture_noMCP/: requirements.txt
Part3_MCP_Todoist/: README.md  package-lock.json  package.json
(+93 files in other folders)
