[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-mcp-server"
version = "0.1.0"
description = "GitHub Repository Analysis MCP Server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Developer"}
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
github-mcp-server = "github_mcp_server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]